Added More Data

--- a/src/app/[slug]/posts/internship-experience.mdx
+++ b/src/app/[slug]/posts/internship-experience.mdx
@@ -14,6 +14,9 @@ summary: "A summary of my internship experiences and what I learned."
 - **Built a Customizable AI Package:** Created a versatile AI-based package capable of producing various content formats tailored to user requirements.
 - **Advanced Web Automation System:** Utilized Selenium to automate the extraction of the latest data, including multimedia content, from diverse websites, ensuring comprehensive and up-to-date content delivery.
 
+## 📜 View Completion Certificate Inline
+<iframe src="./Completion.pdf" width="100%" height="500px"></iframe>
+
 ## 🏢 Coding Content Intern, Listyaan (Remote)
 **Duration:** July 2022 - Dec 2023  
 **Technologies Used:** Data Structures, Algorithms, Problem-Solving  
@@ -22,6 +25,9 @@ summary: "A summary of my internship experiences and what I learned."
 - **Data Structures and Algorithm Optimization:** Worked on implementing and optimizing data structure solutions to address real-world challenges.
 - **Problem-Solving:** Tackled diverse problems, utilizing algorithmic approaches to develop efficient and scalable solutions, contributing to the organization's technical projects.
 - **Growth & Engagement:** Increased channel traction by 50% through high-quality coding content and problem-solving tutorials.
+
+## 📜 View Completion Certificate Inline
+<iframe src="./CERTIFICATE OF Completion.pdf" width="100%" height="500px"></iframe>
 
 ---
 
